# rust-wsm-ts-demo

./: .gitignore  Cargo.toml  README.md  main.rs
src/: another_mod.rs  lib.rs  main  main.rs
www/: bootstrap.js  index.html  index.js  index.ts  package-lock.json  package.json  styles.css  webpack.config.js
www/public/: index.html  index.js
www/utils/: events.ts  js2rust.js
