[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib"] # primary designed for shared lib, such as with integration with the external language e.g. javascript
